--- a/Index.html
+++ b/Index.html
@@ -33,11 +33,11 @@
 
         <!--research form section-->
         <form id="searchbar" method="post" action="http://traitement.php">
-          <span class="research_icons l-dot"><i class="fa-solid fa-location-dot fa-lg"></i></span>
+          <span class="research-icons l-dot"><i class="fa-solid fa-location-dot fa-lg"></i></span>
           <input type="search" id="location" value="Marseille,France" name="location" />
           <input id="button" type="submit" value="Rechercher" />
-          <button type="button" id="ma_glass">
-            <span class="research_icons"><i class="fa-solid fa-magnifying-glass"></i></span>
+          <button type="button" id="ma-glass">
+            <span class="research-icons"><i class="fa-solid fa-magnifying-glass"></i></span>
           </button>
         </form>
 
@@ -45,22 +45,22 @@
         <!--filter form section-->
         <form id="c-filters" method="post" action="http://traitement.php">
           <p class="title">Filtres</p>
-          <div id="c-bars"><label class="filter_value" for="economic">
+          <div id="c-bars"><label class="filter-value" for="economic">
               <input class="filter" type="checkbox" name="economic" id="economic"/>
               <i class="fa-solid fa-money-bill-wave"></i>
               &#201;conomique
             </label>
-            <label class="filter_value" for="family">
+            <label class="filter-value" for="family">
               <input class="filter" type="checkbox" name="family" id="family"/>
               <i class="fa-solid fa-child-reaching fa-lg"></i>
               Familial
             </label>
-            <label class="filter_value" for="romantic" >
+            <label class="filter-value" for="romantic" >
               <input class="filter" type="checkbox" name="romantic" id="romantic"/>
               <i class="fa-solid fa-heart"></i>
               Romantique
             </label>
-            <label class="filter_value" for="animals">
+            <label class="filter-value" for="animals">
               <input class="filter" type="checkbox" name="animals" id="animals"/>
               <i class="fa-solid fa-dog"></i>
               Animaux autorisés
@@ -83,18 +83,18 @@
             <h2>Hébergements à Marseille</h2>
 
             <div class="cards-row">
-              <div class="card xs_card">
-                <a href="#" class="card_link"></a>
-                <div class="c-photo xs_photo">
+              <div class="card xs-card">
+                <a href="#" class="card-link"></a>
+                <div class="c-photo xs-photo">
                   <img class="photo" src="images/hebergements/aubergedelacannebiere.jpg"
                     alt="Auberge de la cannebiere" />
                 </div>
                 <div class="description">
                   <div class="c-nameandprice">
                     <p class="name">Auberge de La Cannebière</p>
-                    <p class="price">Nuit à partir de <span class="inline_bold">25 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline-bold">25 €</span></p>
                   </div>
-                  <div class="rate hotel_card1">
+                  <div class="rate hotel-card1">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -103,17 +103,17 @@
                   </div>
                 </div>
               </div>
-              <div class="card xs_card">
-                <a href="#" class="card_link"></a>
-                <div class="c-photo xs_photo">
+              <div class="card xs-card">
+                <a href="#" class="card-link"></a>
+                <div class="c-photo xs-photo">
                   <img class="photo" src="images/hebergements/hotelduport.jpg" alt="hôtel du port">
                 </div>
                 <div class="description">
                   <div class="c-nameandprice">
                     <p class="name">Hôtel du port</p>
-                    <p class="price">Nuit à partir de <span class="inline_bold">52 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline-bold">52 €</span></p>
                   </div>
-                  <div class="rate hotel_card2">
+                  <div class="rate hotel-card2">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -122,17 +122,17 @@
                   </div>
                 </div>
               </div>
-              <div class="card xs_card">
-                <a href="#" class="card_link"></a>
-                <div class="c-photo xs_photo">
+              <div class="card xs-card">
+                <a href="#" class="card-link"></a>
+                <div class="c-photo xs-photo">
                   <img class="photo" src="images/hebergements/hotellesmouettes.jpg" alt="hôtel les mouettes">
                 </div>
                 <div class="description">
                   <div class="c-nameandprice">
                     <p class="name">Hôtel Les mouettes</p>
-                    <p class="price">Nuit à partir de <span class="inline_bold">76 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline-bold">76 €</span></p>
                   </div>
-                  <div class="rate hotel_card3">
+                  <div class="rate hotel-card3">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -143,17 +143,17 @@
               </div>
             </div>
             <div class="cards-row">
-              <div class="card xs_card">
-                <a href="#" class="card_link"></a>
-                <div class="c-photo xs_photo">
+              <div class="card xs-card">
+                <a href="#" class="card-link"></a>
+                <div class="c-photo xs-photo">
                   <img class="photo" src="images/hebergements/hoteldelamer.jpg" alt="hôtel de la mer">
                 </div>
                 <div class="description">
                   <div class="c-nameandprice">
                     <p class="name">Hôtel de la mer</p>
-                    <p class="price">Nuit à partir de <span class="inline_bold">46 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline-bold">46 €</span></p>
                   </div>
-                  <div class="rate hotel_card4">
+                  <div class="rate hotel-card4">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -162,17 +162,17 @@
                   </div>
                 </div>
               </div>
-              <div class="card xs_card">
-                <a href="#" class="card_link"></a>
-                <div class="c-photo xs_photo">
+              <div class="card xs-card">
+                <a href="#" class="card-link"></a>
+                <div class="c-photo xs-photo">
                   <img class="photo" src="images/hebergements/aubergelepanier.jpg" alt="auberge le panier">
                 </div>
                 <div class="description">
                   <div class="c-nameandprice">
                     <p class="name">Auberge Le Panier</p>
-                    <p class="price">Nuit à partir de <span class="inline_bold">23 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline-bold">23 €</span></p>
                   </div>
-                  <div class="rate hotel_card5">
+                  <div class="rate hotel-card5">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -181,17 +181,17 @@
                   </div>
                 </div>
               </div>
-              <div class="card xs_card">
-                <a href="#" class="card_link"></a>
-                <div class="c-photo xs_photo">
+              <div class="card xs-card">
+                <a href="#" class="card-link"></a>
+                <div class="c-photo xs-photo">
                   <img class="photo" src="images/hebergements/hotelchezamina.jpg" alt="hôtel chez amina">
                 </div>
                 <div class="description">
                   <div class="c-nameandprice">
                     <p class="name">Hôtel chez Amina</p>
-                    <p class="price">Nuit à partir de <span class="inline_bold">96 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline-bold">96 €</span></p>
                   </div>
-                  <div class="rate hotel_card6">
+                  <div class="rate hotel-card6">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -201,7 +201,7 @@
                 </div>
               </div>
             </div>
-            <a id="more" href="#">Afficher plus</a>
+            <div id="more"><a href="#">Afficher plus</a></div>
           </div>
         </section>
 
@@ -213,17 +213,17 @@
               <i class="fa-solid fa-star fa-lg"></i>
             </div>
             <div class="cards-row">
-              <div class="card s_card">
-                <a href="#" class="card_link"></a>
-                <div class="c-photo s_photo">
+              <div class="card s-card">
+                <a href="#" class="card-link"></a>
+                <div class="c-photo s-photo">
                   <img class="photo" src="images/hebergements/hotellesoleildumatin.jpg" alt="Le soleil du matin" />
                 </div>
                 <div class="description">
                   <div class="c-nameandprice">
                     <p class="name">Hôtel Le soleil du matin</p>
-                    <p class="price">Nuit à partir de <span class="inline_bold">128 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline-bold">128 €</span></p>
                   </div>
-                  <div class="rate hotel_card7">
+                  <div class="rate hotel-card7">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -232,9 +232,9 @@
                   </div>
                 </div>
               </div>
-              <div class="card s_card">
-                <a href="#" class="card_link"></a>
-                <div class="c-photo s_photo">
+              <div class="card s-card">
+                <a href="#" class="card-link"></a>
+                <div class="c-photo s-photo">
                   <img class="photo" src="images/hebergements/aucoeurdeleau.jpg" alt="Au coeur de l'eau">
                 </div>
                 <div class="description">
@@ -242,9 +242,9 @@
                     <p class="name">Au coeur de l'eau <br>
                       Chambres d'hôtes
                     </p>
-                    <p class="price">Nuit à partir de <span class="inline_bold">71 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline-bold">71 €</span></p>
                   </div>
-                  <div class="rate hotel_card8">
+                  <div class="rate hotel-card8">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -253,17 +253,17 @@
                   </div>
                 </div>
               </div>
-              <div class="card s_card">
-                <a href="#" class="card_link"></a>
-                <div class="c-photo s_photo">
+              <div class="card s-card">
+                <a href="#" class="card-link"></a>
+                <div class="c-photo s-photo">
                   <img class="photo" src="images/hebergements/hoteltoutbleuetblanc.jpg" alt="Hôtel Tout bleu et Blanc">
                 </div>
                 <div class="description">
                   <div class="c-nameandprice">
                     <p class="name">Hôtel Tout bleu et Blanc</p>
-                    <p class="price">Nuit à partir de <span class="inline_bold">68 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline-bold">68 €</span></p>
                   </div>
-                  <div class="rate hotel_card9">
+                  <div class="rate hotel-card9">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -286,10 +286,11 @@
           <div class="c-cards-column">
             <div class="cards-section cards-section1">
               <div class="cards-column cc1">
-                <div class="card xl_card">
-                  <a href="#" class="card_link"></a>
-                  <div class="c-photo xl_photo">
-                    <img class="photo" src="images/activites/vieuxport.jpg" alt="Vieux Port" />
+                <div class="card xl-card">
+                  <a href="#" class="card-link"></a>
+                  <div class="c-photo xl-photo">
+                    <img class="photo mobile-photo" src="images/activites/vieuxport.jpg" alt="Vieux Port" />
+                    <img class="photo d-photo" src="images/activites/l/l-port.jpg" alt="Vieux Port" />
                   </div>
                   <div class="description">
                     <div>
@@ -299,19 +300,21 @@
                 </div>
               </div>
               <div class="cards-column cc2">
-                <div class="card l_card lc1">
-                  <a href="#" class="card_link"></a>
-                  <div class="c-photo l_photo">
-                    <img class="photo" src="images/activites/fortdepomegues.jpg" alt="Fort de Pomègues" />
+                <div class="card l-card lc1">
+                  <a href="#" class="card-link"></a>
+                  <div class="c-photo l-photo">
+                    <img class="photo mobile-photo" src="images/activites/fortdepomegues.jpg" alt="Fort de Pomègues" />
+                    <img class="photo d-photo" src="images/activites/l/l_fort.jpg" alt="Fort de Pomègues" />
                   </div>
                   <div class="description">
                     <p class="name">Fort de Pomègues</p>
                   </div>
                 </div>
-                <div class="card m_card mc1">
-                  <a href="#" class="card_link"></a>
-                  <div class="c-photo m_photo">
-                    <img class="photo" src="images/activites/ilesdufrioul.jpg" alt="Îles du Frioul" />
+                <div class="card m-card mc1">
+                  <a href="#" class="card-link"></a>
+                  <div class="c-photo m-photo">
+                    <img class="photo mobile-photo" src="images/activites/ilesdufrioul.jpg" alt="Îles du Frioul" />
+                    <img class="photo d-photo" src="images/activites/l/l_frioul.jpg" alt="Îles du Frioul" />
                   </div>
                   <div class="description">
                     <p class="name">Îles du Frioul</p>
@@ -321,10 +324,12 @@
             </div>
             <div class="cards-section cards-section2">
               <div class="cards-column cc1">
-                <div class="card xl_card">
-                  <a href="#" class="card_link"></a>
-                  <div class="c-photo xl_photo">
-                    <img class="photo" src="images/activites/parcnationaldescalanques.jpg"
+                <div class="card xl-card">
+                  <a href="#" class="card-link"></a>
+                  <div class="c-photo xl-photo">
+                    <img class="photo mobile-photo" src="images/activites/parcnationaldescalanques.jpg"
+                      alt="Parc National des Calanques" />
+                      <img class="photo d-photo" src="images/activites/l/l_calanques.jpg"
                       alt="Parc National des Calanques" />
                   </div>
                   <div class="description">
@@ -333,19 +338,21 @@
                 </div>
               </div>
               <div class="cards-column cc2">
-                <div class="card m_card mc2">
-                  <a href="#" class="card_link"></a>
-                  <div class="c-photo m2_photo">
-                    <img class="photo" src="images/activites/notredamedelagarde.jpg" alt="Notre-Dame-de-la-Garde">
+                <div class="card m-card mc2">
+                  <a href="#" class="card-link"></a>
+                  <div class="c-photo m2-photo">
+                    <img class="photo mobile-photo" src="images/activites/notredamedelagarde.jpg" alt="Notre-Dame-de-la-Garde">
+                    <img class="photo d-photo" src="images/activites/l/l_notredame.jpg" alt="Notre-Dame-de-la-Garde">
                   </div>
                   <div class="description">
                     <p class="name">Notre-Dame-de-la-Garde</p>
                   </div>
                   </div>
-                <div class="card l_card lc2">
-                  <a href="#" class="card_link"></a>
-                  <div class="c-photo l2_photo">
-                    <img class="photo" src="images/activites/parclongchamp.jpg" alt="Parc Longchamp" />
+                <div class="card l-card lc2">
+                  <a href="#" class="card-link"></a>
+                  <div class="c-photo l2-photo">
+                    <img class="photo mobile-photo" src="images/activites/parclongchamp.jpg" alt="Parc Longchamp" />
+                    <img class="photo d-photo" src="images/activites/l/l_longchamp.jpg" alt="Parc Longchamp" />
                   </div>
                   <div class="description">
                     <p class="name">Parc Longchamp</p>
@@ -361,7 +368,7 @@
     <!--Footer-->
     <footer>
       <div class="footer-c">
-        <div class="c-footer_links">
+        <div class="c-footer-links">
           <h3>A propos</h3>
           <ul>
             <li><a href="#">Fonctionnement du site</a></li>
@@ -369,14 +376,14 @@
             <li><a href="#">Données et confidentialité</a></li>
           </ul>
         </div>
-        <div class="c-footer_links">
+        <div class="c-footer-links">
           <h3>Nos hébergements</h3>
           <ul>
             <li><a href="#">Charte qualité</a></li>
             <li><a href="#">Soumettre votre hôtel</a></li>
           </ul>
         </div>
-        <div class="c-footer_links">
+        <div class="c-footer-links">
           <h3>Assitance</h3>
           <ul>
             <li><a href="#">Centre d'aide</a></li>
