fin de la partie desktop

--- a/Index.html
+++ b/Index.html
@@ -81,7 +81,7 @@
         <section class="hotels">
           <div class="hotels-c">
             <h2>Hébergements à Marseille</h2>
-
+            <div class="c-cards-row">
             <div class="cards-row">
               <div class="card xs-card">
                 <a href="#" class="card-link"></a>
@@ -201,6 +201,7 @@
                 </div>
               </div>
             </div>
+          </div>
             <div id="more"><a href="#">Afficher plus</a></div>
           </div>
         </section>
@@ -368,7 +369,7 @@
     <!--Footer-->
     <footer>
       <div class="footer-c">
-        <div class="c-footer-links">
+        <div class="c-footer-links about">
           <h3>A propos</h3>
           <ul>
             <li><a href="#">Fonctionnement du site</a></li>
@@ -376,14 +377,14 @@
             <li><a href="#">Données et confidentialité</a></li>
           </ul>
         </div>
-        <div class="c-footer-links">
+        <div class="c-footer-links charter">
           <h3>Nos hébergements</h3>
           <ul>
             <li><a href="#">Charte qualité</a></li>
             <li><a href="#">Soumettre votre hôtel</a></li>
           </ul>
         </div>
-        <div class="c-footer-links">
+        <div class="c-footer-links contact">
           <h3>Assitance</h3>
           <ul>
             <li><a href="#">Centre d'aide</a></li>
