Correction bouton loupe

--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,7 @@
           <span class="research-icons l-dot"><i class="fa-solid fa-location-dot fa-lg"></i></span>
           <input type="search" id="location" value="Marseille,France" name="location" />
           <input id="button" type="submit" value="Rechercher" />
-          <button type="button" id="ma-glass">
+          <button type="submit" id="ma-glass">
             <span class="research-icons"><i class="fa-solid fa-magnifying-glass"></i></span>
           </button>
         </form>
